--- a/dzvoice/assets/scss/components/_footer.scss
+++ b/dzvoice/assets/scss/components/_footer.scss
@@ -56,3 +56,312 @@
     }
   }
 }
+@media screen and (max-width: 1199px) and (min-width: 992px) {
+  .footer {
+    &-logo {
+      margin-right: auto;
+      position: absolute;
+      top: 88px;
+      left: 0;
+    }
+    &-wrap {
+      align-items: center;
+      justify-content: center;
+    }
+    &__text {
+      font-family: $ptSans;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 19px;
+      line-height: 25px;
+      letter-spacing: 0.04em;
+    }
+    &-nav {
+      display: flex;
+      align-items: center;
+      font-family: $ptSans;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 20px;
+      line-height: 117%;
+      letter-spacing: 0.04em;
+      color: #002939;
+      margin-bottom: 50px;
+      &__item {
+        margin-right: 14px;
+        &:nth-child(4) {
+          margin-right: 110px;
+        }
+        &:last-child {
+          margin-right: 0;
+          position: absolute;
+          right: 0;
+          top: 129px;
+        }
+      }
+      &__link {
+        color: $mainColor;
+        &:hover {
+          color: $mainColor;
+        }
+      }
+    }
+    &__author {
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 15px;
+      line-height: 95.5%;
+      text-align: center;
+      letter-spacing: 0.04em;
+      text-decoration-line: underline;
+      color: #002939;
+      margin-top: 50px;
+      span {
+        display: block;
+      }
+    }
+  }
+}
+@media screen and (min-width: 640px) and (max-width: 991px) {
+  .container {
+    max-width: 640px;
+    padding: 0 10px;
+  }
+  .footer {
+    &-logo {
+      margin: 0 auto 50px;
+      position: static;
+      &__img {
+        width: 131px;
+        height: 24px;
+      }
+      &__text {
+        font-weight: 400;
+        font-size: 13px;
+        line-height: 17px;
+      }
+    }
+    &-wrap {
+      align-items: center;
+      flex-direction: column;
+      justify-content: center;
+    }
+    &__text {
+      font-family: $ptSans;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 19px;
+      line-height: 25px;
+      letter-spacing: 0.04em;
+    }
+    &-nav {
+      display: flex;
+      align-items: center;
+      font-family: $ptSans;
+      flex-direction: column;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 20px;
+      line-height: 117%;
+      letter-spacing: 0.04em;
+      color: #002939;
+      margin-bottom: 0px;
+      &__item {
+        margin-right: 0px;
+        margin-bottom: 14px;
+        &:nth-child(4) {
+          margin-right: 0px;
+        }
+        &:last-child {
+          margin-right: 0;
+          position: static;
+          margin-bottom: 0;
+        }
+      }
+      &__link {
+        color: $mainColor;
+        &:hover {
+          color: $mainColor;
+        }
+      }
+    }
+    &__author {
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 15px;
+      line-height: 95.5%;
+      text-align: center;
+      letter-spacing: 0.04em;
+      text-decoration-line: underline;
+      color: #002939;
+      margin-top: 50px;
+      span {
+        display: block;
+      }
+    }
+  }
+}
+@media screen and (min-width: 480px) and (max-width: 639px) {
+  .container {
+    max-width: 480px;
+    padding: 0 10px;
+  }
+  .footer {
+    &-logo {
+      margin: 0 auto 75px;
+      position: static;
+      &__img {
+        width: 131px;
+        height: 24px;
+      }
+      &__text {
+        font-weight: 400;
+        font-size: 13px;
+        line-height: 17px;
+      }
+    }
+    &-wrap {
+      align-items: center;
+      flex-direction: column;
+      justify-content: center;
+    }
+    &__text {
+      font-family: $ptSans;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 19px;
+      line-height: 25px;
+      letter-spacing: 0.04em;
+    }
+    &-nav {
+      display: flex;
+      align-items: center;
+      font-family: $ptSans;
+      flex-direction: column;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 20px;
+      line-height: 117%;
+      letter-spacing: 0.04em;
+      color: #002939;
+      margin-bottom: 0px;
+      &__item {
+        margin-right: 0px;
+        margin-bottom: 14px;
+        &:nth-child(4) {
+          margin-right: 0px;
+        }
+        &:last-child {
+          margin-right: 0;
+          position: static;
+          margin-bottom: 0;
+        }
+      }
+      &__link {
+        color: $mainColor;
+        &:hover {
+          color: $mainColor;
+        }
+      }
+    }
+    &__author {
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 15px;
+      line-height: 95.5%;
+      text-align: center;
+      letter-spacing: 0.04em;
+      text-decoration-line: underline;
+      color: #002939;
+      margin-top: 100px;
+      margin-bottom: 12px;
+      span {
+        display: block;
+      }
+    }
+  }
+}
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .container {
+    max-width: 320px;
+    padding: 0 10px;
+  }
+  .footer {
+    &-logo {
+      margin: 0 auto 75px;
+      position: static;
+      &__img {
+        width: 131px;
+        height: 24px;
+      }
+      &__text {
+        font-weight: 400;
+        font-size: 13px;
+        line-height: 17px;
+      }
+    }
+    &-wrap {
+      align-items: center;
+      flex-direction: column;
+      justify-content: center;
+    }
+    &__text {
+      font-family: $ptSans;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 19px;
+      line-height: 25px;
+      letter-spacing: 0.04em;
+    }
+    &-nav {
+      display: flex;
+      align-items: center;
+      font-family: $ptSans;
+      flex-direction: column;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 20px;
+      line-height: 117%;
+      letter-spacing: 0.04em;
+      color: #002939;
+      margin-bottom: 0px;
+      &__item {
+        margin-right: 0px;
+        margin-bottom: 14px;
+        &:nth-child(4) {
+          margin-right: 0px;
+        }
+        &:last-child {
+          margin-right: 0;
+          position: static;
+          margin-bottom: 0;
+        }
+      }
+      &__link {
+        color: $mainColor;
+        &:hover {
+          color: $mainColor;
+        }
+      }
+    }
+    &__author {
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 15px;
+      line-height: 95.5%;
+      text-align: center;
+      letter-spacing: 0.04em;
+      text-decoration-line: underline;
+      color: #002939;
+      margin-top: 100px;
+      margin-bottom: 12px;
+      span {
+        display: block;
+      }
+    }
+  }
+}
