--- a/dzvoice/assets/scss/components/_about-les.scss
+++ b/dzvoice/assets/scss/components/_about-les.scss
@@ -11,7 +11,11 @@
     position: absolute;
     left: 60px;
     top: 20px;
-    background: radial-gradient(50% 50% at 50% 50%, rgba(247, 113, 37, 0.5) 0%, rgba(196, 196, 196, 0) 100%);
+    background: radial-gradient(
+      50% 50% at 50% 50%,
+      rgba(247, 113, 37, 0.5) 0%,
+      rgba(196, 196, 196, 0) 100%
+    );
   }
   &__wrap {
     flex-direction: column;
@@ -26,6 +30,9 @@
     letter-spacing: 0.04em;
     color: $mainColor;
     margin-bottom: 140px;
+    &-mob {
+      display: none;
+    }
     span {
       margin-left: 162px;
     }
@@ -49,6 +56,7 @@
       }
     }
     &-title {
+      font-family: $grotesk;
       font-style: normal;
       font-weight: 800;
       font-size: 19px;
@@ -70,7 +78,6 @@
     }
   }
   &__desc {
-    width: 560px;
     margin-top: 30px;
     &-title {
       font-family: $ptSans;
@@ -132,3 +139,571 @@
     }
   }
 }
+@media screen and (max-width: 1199px) and (min-width: 992px) {
+  .about-les {
+    margin-top: 140px;
+    background-image: url("../img/main/about-les/bg.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-position: 100px -70px;
+    position: relative;
+    &__bg {
+      width: 500px;
+      height: 500px;
+      position: absolute;
+      left: -150px;
+      top: 50px;
+      background: radial-gradient(
+        50% 50% at 50% 50%,
+        rgba(247, 113, 37, 0.5) 0%,
+        rgba(196, 196, 196, 0) 100%
+      );
+    }
+    &__wrap {
+      flex-direction: column;
+    }
+    &__title {
+      display: flex;
+      flex-direction: column;
+      font-family: $grotesk;
+      font-weight: 800;
+      font-size: 40px;
+      line-height: 95.5%;
+      letter-spacing: 0.04em;
+      color: $mainColor;
+      margin-bottom: 140px;
+      span {
+        margin-left: 162px;
+      }
+    }
+    &__lists {
+      display: flex;
+    }
+    &__list {
+      &--left {
+        margin-right: 100px;
+        .about-les__list-item {
+          &:nth-child(1) {
+            margin-bottom: 200px;
+          }
+        }
+      }
+      &--right {
+        margin-top: 100px;
+        .about-les__list-item {
+          margin-bottom: 50px;
+        }
+      }
+      &-title {
+        font-style: normal;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 26px;
+        letter-spacing: 0.04em;
+        color: $mainColor;
+        position: relative;
+        &::before {
+          content: "";
+          width: 380px;
+          height: 2px;
+          background-color: #dc4a8c;
+          position: absolute;
+          top: -10px;
+          left: -24px;
+        }
+      }
+      &-desc {
+      }
+    }
+    &__desc {
+      margin-top: 30px;
+      &-title {
+        width: 380px;
+        font-family: $ptSans;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 117%;
+        letter-spacing: 0.04em;
+        color: $mainColor;
+        margin-bottom: 5px;
+      }
+      &-text {
+        width: 380px;
+        font-family: $ptSans;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 117%;
+        letter-spacing: 0.04em;
+        color: $mainColor;
+      }
+      &-item {
+        margin-bottom: 30px;
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+    &__btn {
+      width: 300px;
+      height: 77px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(91.86deg, #dc4a8c 1.63%, #f77125 91.47%);
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 19px;
+      line-height: 23px;
+      text-align: center;
+      letter-spacing: 0.04em;
+      color: $mainColor;
+      text-decoration: none !important;
+      transition: all 0.3s ease;
+      margin-top: -160px;
+      svg path {
+        transition: all 0.3s ease;
+      }
+      &-arrow {
+        width: 25px;
+        height: 25px;
+        margin-right: 0px;
+      }
+      &:hover {
+        color: #fff;
+        svg {
+          path {
+            stroke: #fff;
+          }
+        }
+      }
+    }
+  }
+}
+@media screen and (min-width: 640px) and (max-width: 991px) {
+  .container {
+    max-width: 640px;
+    padding: 0 10px;
+  }
+  .about-les {
+    margin-top: 0px;
+    background-image: url("../img/main/about-les/bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    &__bg {
+      display: none;
+    }
+    &__wrap {
+      flex-direction: column;
+    }
+    &__title {
+      display: none;
+      span {
+        margin-left: 0px;
+      }
+      &-mob {
+        display: block;
+        font-family: $grotesk;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 30px;
+        line-height: 100%;
+        letter-spacing: 0.04em;
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke: 2px;
+        margin-bottom: 90px;
+        span {
+          display: block;
+          &:nth-child(2) {
+            padding-left: 170px;
+          }
+        }
+      }
+    }
+    &__lists {
+      order: 1;
+      display: flex;
+    }
+    &__list {
+      &__item {
+       
+      }
+      &--left {
+        margin-right: 20px; 
+        .about-les__list-item {
+          &:nth-child(1) {
+            margin-bottom: 200px;
+          }
+        }
+      }
+      &--right {
+     
+        margin-top: 0px;
+        .about-les__list-item {
+          margin-bottom: 50px;
+        }
+      }
+      &-title {
+        font-family: $grotesk;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 19px;
+        line-height: 23px;
+        letter-spacing: 0.04em;
+        color: $mainColor;
+        position: relative;
+        &::before {
+          content: "";
+          width: 100%;
+          height: 2px;
+          background-color: #dc4a8c;
+          position: absolute;
+          top: -10px;
+          left: 0px;
+        }
+      }
+      &-desc {
+      }
+    }
+    &__desc {
+      margin-top: 30px;
+      &-title {
+        font-family: $ptSans;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 117%;
+        letter-spacing: 0.04em;
+        color: $mainColor;
+        margin-bottom: 5px;
+      }
+      &-text {
+        font-family: $ptSans;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 117%;
+        letter-spacing: 0.04em;
+        color: $mainColor;
+      }
+      &-item {
+        margin-bottom: 30px;
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+    &__btn {
+      width: 297px;
+      height: 68px;
+      font-weight: 800;
+      font-size: 16px;
+      line-height: 19px;
+      margin-top: 0;
+      margin-bottom: 150px;
+      svg path {
+        transition: all 0.3s ease;
+      }
+      &-arrow {
+        display: none;
+        margin-right: 0px;
+      }
+      &:hover {
+        color: #fff;
+        svg {
+          path {
+            stroke: #fff;
+          }
+        }
+      }
+    }
+  }
+}
+@media screen and (min-width: 480px) and (max-width: 639px) {
+  .container {
+    max-width: 480px;
+    padding: 0 10px;
+  }
+  .about-les {
+    margin-top: 0px;
+    background-image: url("../img/main/about-les/bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    background-position: center;
+    &__bg {
+      display: none;
+    }
+    &__wrap {
+      flex-direction: column;
+    }
+    &__title {
+      display: none;
+      span {
+        margin-left: 0px;
+      }
+      &-mob {
+        display: block;
+        font-family: $grotesk;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 30px;
+        line-height: 100%;
+        letter-spacing: 0.04em;
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke: 2px;
+        margin-bottom: 100px;
+        span {
+          display: block;
+          &:nth-child(2) {
+            padding-left: 110px;
+          }
+        }
+      }
+    }
+    &__lists {
+      order: 1;
+      display: flex;
+      overflow: scroll;
+      padding-top: 20px;
+    }
+    &__list {
+      &__item {
+       
+      }
+      &--left {
+        margin-right: 20px; 
+        .about-les__list-item {
+          &:nth-child(1) {
+            margin-bottom: 200px;
+          }
+        }
+      }
+      &--right {
+     
+        margin-top: 0px;
+        .about-les__list-item {
+          margin-bottom: 50px;
+        }
+      }
+      &-title {
+        font-family: $grotesk;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 17px;
+        line-height: 20px;
+        letter-spacing: 0.04em;
+        color: $mainColor;
+        position: relative;
+        &::before {
+          content: "";
+          width: 100%;
+          height: 2px;
+          background-color: #dc4a8c;
+          position: absolute;
+          top: -10px;
+          left: 0px;
+        }
+      }
+      &-desc {
+      }
+    }
+    &__desc {
+      margin-top: 30px;
+      &-title {
+        font-family: $ptSans;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 117%;
+        letter-spacing: 0.04em;
+        color: $mainColor;
+        margin-bottom: 5px;
+      }
+      &-text {
+        font-family: $ptSans;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 117%;
+        letter-spacing: 0.04em;
+        color: $mainColor;
+      }
+      &-item {
+        margin-bottom: 30px;
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+    &__btn {
+      width: 300px;
+      height: 68px;
+      font-weight: 800;
+      font-size: 16px;
+      line-height: 19px;
+      margin: 0 auto 150px;
+      svg path {
+        transition: all 0.3s ease;
+      }
+      &-arrow {
+        display: none;
+        margin-right: 0px;
+      }
+      &:hover {
+        color: #fff;
+        svg {
+          path {
+            stroke: #fff;
+          }
+        }
+      }
+    }
+  }
+}
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .container {
+    max-width: 320px;
+    padding: 0 10px;
+  }
+  .about-les {
+    margin-top: 0px;
+    background-image: url("../img/main/about-les/bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    background-position: center;
+    &__bg {
+      display: none;
+    }
+    &__wrap {
+      flex-direction: column;
+    }
+    &__title {
+      display: none;
+      span {
+        margin-left: 0px;
+      }
+      &-mob {
+        display: block;
+        font-family: $grotesk;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 30px;
+        line-height: 100%;
+        letter-spacing: 0.04em;
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke: 2px;
+        margin-bottom: 50px;
+        span {
+          display: block;
+          &:nth-child(2) {
+            padding-left: 90px;
+          }
+        }
+      }
+    }
+    &__lists {
+      order: 1;
+      display: flex;
+      overflow: scroll;
+      padding-top: 20px;
+    }
+    &__list {
+      &__item {
+       
+      }
+      &--left {
+        margin-right: 20px; 
+        .about-les__list-item {
+          &:nth-child(1) {
+            margin-bottom: 200px;
+          }
+        }
+      }
+      &--right {
+     
+        margin-top: 0px;
+        .about-les__list-item {
+          margin-bottom: 50px;
+        }
+      }
+      &-title {
+        font-family: $grotesk;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 16px;
+        line-height: 20px;
+        letter-spacing: 0.04em;
+        color: $mainColor;
+        position: relative;
+        &::before {
+          content: "";
+          width: 100%;
+          height: 2px;
+          background-color: #dc4a8c;
+          position: absolute;
+          top: -10px;
+          left: 0px;
+        }
+      }
+      &-desc {
+      }
+    }
+    &__desc {
+      margin-top: 30px;
+      &-title {
+        font-family: $ptSans;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 117%;
+        letter-spacing: 0.04em;
+        color: $mainColor;
+        margin-bottom: 5px;
+      }
+      &-text {
+        font-family: $ptSans;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 117%;
+        letter-spacing: 0.04em;
+        color: $mainColor;
+      }
+      &-item {
+        margin-bottom: 30px;
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+    &__btn {
+      width: 271px;
+      height: 68px; 
+      font-weight: 800;
+      font-size: 16px;
+      line-height: 19px;
+      margin: 0 auto 150px;
+      svg path {
+        transition: all 0.3s ease;
+      }
+      &-arrow {
+        display: none;
+        margin-right: 0px;
+      }
+      &:hover {
+        color: #fff;
+        svg {
+          path {
+            stroke: #fff;
+          }
+        }
+      }
+    }
+  }
+}
+
