--- a/dzvoice/assets/scss/components/_contacts.scss
+++ b/dzvoice/assets/scss/components/_contacts.scss
@@ -3,7 +3,7 @@
   padding-bottom: 100px;
   .container {
     padding-top: 100px;
-    border-top: 1px solid #FFFFFF;
+    border-top: 1px solid #ffffff;
   }
   &__title {
     font-family: $grotesk;
@@ -29,7 +29,6 @@
     display: block;
     margin-bottom: 10px;
     &-wrap {
-      
     }
     &:last-child {
       margin-bottom: 0;
@@ -37,7 +36,6 @@
     &:hover {
       color: $mainColor;
     }
-    
   }
   &-list {
     display: flex;
@@ -62,6 +60,327 @@
       transition: all 0.4s ease;
       &:hover {
         color: #002939;
+      }
+    }
+  }
+}
+@media screen and (max-width: 1199px) and (min-width: 992px) {
+  .contacts {
+    padding-bottom: 100px;
+    .container {
+      padding-top: 80px;
+      border-top: 1px solid #ffffff;
+    }
+    &__title {
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 50px;
+      line-height: 48px;
+      letter-spacing: 0.04em;
+      margin-bottom: 50px;
+      color: $mainColor;
+      margin-left: 70px;
+      &:hover {
+        color: $mainColor;
+      }
+    }
+    &__link {
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 30px;
+      line-height: 95.5%;
+      letter-spacing: 0.04em;
+      color: $mainColor;
+      display: block;
+      margin-bottom: 10px;
+      &-wrap {
+        margin-left: 70px;
+      }
+      &:last-child {
+        margin-bottom: 0;
+      }
+      &:hover {
+        color: $mainColor;
+      }
+    }
+    &-list {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: 100px;
+      &__item {
+        margin-right: 70px;
+        &:last-child {
+          margin-right: 0;
+        }
+      }
+      &__link {
+        font-family: $grotesk;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 19px;
+        line-height: 95.5%;
+        letter-spacing: 0.04em;
+        text-decoration-line: underline;
+        color: #e5e5e5;
+        transition: all 0.4s ease;
+        &:hover {
+          color: #002939;
+        }
+      }
+    }
+  }
+}
+@media screen and (min-width: 640px) and (max-width: 991px) {
+  .container {
+    max-width: 640px;
+    padding: 0 10px;
+  }
+  .contacts {
+    padding-bottom: 150px;
+    .container {
+      padding-top: 40px;
+      border-top: 1px solid #ffffff;
+    }
+    &__title {
+      text-align: center;
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 30px;
+      line-height: 89%;
+      letter-spacing: 0.04em;
+      color: $mainColor;
+      margin: 0 auto 30px;
+      &:hover {
+        color: $mainColor;
+      }
+    }
+    &__link {
+      text-align: center;
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 15px;
+      line-height: 89%;
+      letter-spacing: 0.04em;
+      color: $mainColor;
+      display: block;
+      margin-bottom: 10px;
+      &-wrap {
+        margin: 0 auto 50px;
+      }
+      &:last-child {
+        margin-bottom: 0;
+      }
+      &:hover {
+        color: $mainColor;
+      }
+    }
+    &-list {
+      display: none;
+      &__item {
+        margin-right: 70px;
+        &:last-child {
+          margin-right: 0;
+        }
+      }
+      &__link {
+        font-family: $grotesk;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 19px;
+        line-height: 95.5%;
+        letter-spacing: 0.04em;
+        text-decoration-line: underline;
+        color: #e5e5e5;
+        transition: all 0.4s ease;
+        &:hover {
+          color: #002939;
+        }
+      }
+    }
+    &-socials {
+      &-mob {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        &__item {
+          margin-right: 20px;
+          &:last-child {
+            margin-right: 0;
+          }
+        }
+      }
+    }
+  }
+}
+@media screen and (min-width: 480px) and (max-width: 639px) {
+  .container {
+    max-width: 480px;
+    padding: 0 10px;
+  }
+  .contacts {
+    padding-bottom: 75px;
+    .container {
+      padding-top: 40px;
+      border-top: 1px solid #ffffff;
+    }
+    &__title {
+      text-align: center;
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 30px;
+      line-height: 89%;
+      letter-spacing: 0.04em;
+      color: $mainColor;
+      margin: 0 auto 30px;
+      &:hover {
+        color: $mainColor;
+      }
+    }
+    &__link {
+      text-align: center;
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 15px;
+      line-height: 89%;
+      letter-spacing: 0.04em;
+      color: $mainColor;
+      display: block;
+      margin-bottom: 10px;
+      &-wrap {
+        margin: 0 auto 50px;
+      }
+      &:last-child {
+        margin-bottom: 0;
+      }
+      &:hover {
+        color: $mainColor;
+      }
+    }
+    &-list {
+      display: none;
+      &__item {
+        margin-right: 70px;
+        &:last-child {
+          margin-right: 0;
+        }
+      }
+      &__link {
+        font-family: $grotesk;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 19px;
+        line-height: 95.5%;
+        letter-spacing: 0.04em;
+        text-decoration-line: underline;
+        color: #e5e5e5;
+        transition: all 0.4s ease;
+        &:hover {
+          color: #002939;
+        }
+      }
+    }
+    &-socials {
+      &-mob {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        &__item {
+          margin-right: 20px;
+          &:last-child {
+            margin-right: 0;
+          }
+        }
+      }
+    }
+  }
+}
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .container {
+    max-width: 320px;
+    padding: 0 10px;
+  }
+  .contacts {
+    padding-bottom: 100px;
+    .container {
+      padding-top: 40px;
+      border-top: 1px solid #ffffff;
+    }
+    &__title {
+      text-align: left;
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 30px;
+      line-height: 89%;
+      letter-spacing: 0.04em;
+      color: $mainColor;
+      margin: 0 0 30px 0;
+      &:hover {
+        color: $mainColor;
+      }
+    }
+    &__link {
+      text-align: left;
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 15px;
+      line-height: 89%;
+      letter-spacing: 0.04em;
+      color: $mainColor;
+      display: block;
+      margin-bottom: 10px;
+      &-wrap {
+        margin: 0 0 50px 0;
+      }
+      &:last-child {
+        margin-bottom: 0;
+      }
+      &:hover {
+        color: $mainColor;
+      }
+    }
+    &-list {
+      display: none;
+      &__item {
+        margin-right: 70px;
+        &:last-child {
+          margin-right: 0;
+        }
+      }
+      &__link {
+        font-family: $grotesk;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 19px;
+        line-height: 95.5%;
+        letter-spacing: 0.04em;
+        text-decoration-line: underline;
+        color: #e5e5e5;
+        transition: all 0.4s ease;
+        &:hover {
+          color: #002939;
+        }
+      }
+    }
+    &-socials {
+      &-mob {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        &__item {
+          margin-right: 20px;
+          &:last-child {
+            margin-right: 0;
+          }
+        }
       }
     }
   }
