--- a/dzvoice/assets/scss/components/_custom-video.scss
+++ b/dzvoice/assets/scss/components/_custom-video.scss
@@ -37,3 +37,174 @@
     border: 0;
   }
 }
+@media screen and (max-width: 1199px) and (min-width: 992px) {
+  .custom-video {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 939px;
+    height: 518px;
+    border-radius: 0px 50px;
+    &__preview {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+    &__btn {
+      width: 150px;
+      height: 150px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(180deg, #f77125 0%, #dc4a8c 100%);
+      border-radius: 50%;
+      position: absolute;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+      border: 0;
+      &-play {
+        padding-left: 20px;
+      }
+    }
+    &__video {
+      width: 100%;
+      height: 100%;
+      border-radius: 0px 50px;
+      border: 0;
+    }
+  }
+}
+@media screen and (min-width: 640px) and (max-width: 991px) {
+  .custom-video {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 615px;
+    height: 339px;
+    border-radius: 0px 50px;
+    &__preview {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+    &__btn {
+      width: 98px;
+      height: 98px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(180deg, #f77125 0%, #dc4a8c 100%);
+      border-radius: 50%;
+      position: absolute;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+      border: 0;
+      &-play {
+        width: 49px;
+        height: 49px;
+        padding-left: 10px;
+      }
+    }
+    &__video {
+      width: 100%;
+      height: 100%;
+      border-radius: 0px 50px;
+      border: 0;
+    }
+  }
+}
+@media screen and (min-width: 480px) and (max-width: 639px) {
+  .custom-video {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 458px;
+    height: 253px;
+    border-radius: 0px 50px;
+    &__preview {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+    &__btn {
+      width: 73px;
+      height: 73px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(180deg, #f77125 0%, #dc4a8c 100%);
+      border-radius: 50%;
+      position: absolute;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+      border: 0;
+      &-play {
+        width: 40px;
+        height: 40px;
+        padding-left: 10px;
+      }
+    }
+    &__video {
+      width: 100%;
+      height: 100%;
+      border-radius: 0px 50px;
+      border: 0;
+    }
+  }
+}
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .custom-video {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 298px;
+    height: 164px;
+    border-radius: 0px 50px;
+    &__preview {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      border-radius: 0px 50px;
+    }
+    &__btn {
+      width: 47px;
+      height: 47px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(180deg, #f77125 0%, #dc4a8c 100%);
+      border-radius: 50%;
+      position: absolute;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+      border: 0;
+      &-play {
+        width: 25px;
+        height: 25px;
+        padding-left: 5px;
+      }
+    }
+    &__video {
+      width: 100%;
+      height: 100%;
+      border-radius: 0px 50px;
+      border: 0;
+    }
+  }
+}
