--- a/dzvoice/assets/scss/components/_methods.scss
+++ b/dzvoice/assets/scss/components/_methods.scss
@@ -13,12 +13,261 @@
     line-height: 48px;
     letter-spacing: 0.04em;
     margin-bottom: 85px;
+    &-mob {
+      display: none;
+    }
     &--line {
       padding-left: 200px;
     }
     &--fill {
       -webkit-text-fill-color: transparent;
       -webkit-text-stroke: 3px;
+    }
+  }
+}
+@media screen and (max-width: 1199px) and (min-width: 992px) {
+  .methods {
+    padding-top: 200px;
+    padding-bottom: 262px;
+    background-image: url("../img/main/methods/bg.png");
+    background-size: 1000px 1400px;
+    background-position: center 50px;
+    background-repeat: no-repeat;
+    &__title {
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 40px;
+      line-height: 95.5%;
+      letter-spacing: 0.04em;
+      margin-bottom: 100px;
+      &--line {
+        padding-left: 160px;
+      }
+      &--fill {
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke: 3px;
+      }
+    }
+  }
+}
+@media screen and (min-width: 640px) and (max-width: 991px) {
+  .container {
+    max-width: 640px;
+    padding: 0 10px;
+  }
+  .methods {
+    padding-top: 50px;
+    padding-bottom: 60px;
+    background-image: url("../img/main/methods/bg.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    &__title {
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 30px;
+      line-height: 100%;
+      letter-spacing: 0.04em;
+      margin-bottom: 85px;
+      display: none;
+      &--line {
+        padding-left: 0px;
+      }
+      &--fill {
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke: 2px;
+      }
+      &-mob {
+        width: 600px;
+        display: block;
+        font-family: $grotesk;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 30px;
+        line-height: 100%;
+        margin-left: 15px;
+        margin-bottom: 100px;
+        .text-fill {
+          -webkit-text-fill-color: transparent;
+          -webkit-text-stroke: 2px;
+          display: block;
+          padding-left: 160px;
+        }
+      }
+    }
+    &-wrap {
+      flex-direction: column;
+    }
+    .custom-video {
+      margin-bottom: 50px;
+    }
+    &__btn {
+      &-mob {
+        width: 297px;
+        height: 68px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: linear-gradient(91.86deg, #dc4a8c 1.63%, #f77125 91.47%);
+        font-family: $grotesk;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 16px;
+        line-height: 19px;
+        color: $mainColor;
+        &:hover {
+          color: $mainColor;
+        }
+      }
+    }
+  }
+}
+@media screen and (min-width: 480px) and (max-width: 639px) {
+  .container {
+    max-width: 480px;
+    padding: 0 10px;
+  }
+  .methods {
+    padding-top: 150px;
+    padding-bottom: 100px;
+    background-image: url("../img/main/methods/bg.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: 100px 0;
+    &__title {
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 30px;
+      line-height: 100%;
+      letter-spacing: 0.04em;
+      margin-bottom: 85px;
+      display: none;
+      &--line {
+        padding-left: 0px;
+      }
+      &--fill {
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke: 2px;
+      }
+      &-mob {
+        width: 458px;
+        display: block;
+        font-family: $grotesk;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 30px;
+        line-height: 100%;
+        margin-left: 15px;
+        margin-bottom: 50px;
+        .text-fill {
+          -webkit-text-fill-color: transparent;
+          -webkit-text-stroke: 2px;
+          display: block;
+          padding-left: 80px;
+        }
+      }
+    }
+    &-wrap {
+      flex-direction: column;
+    }
+    .custom-video {
+      margin-bottom: 50px;
+    }
+    &__btn {
+      &-mob {
+        width: 300px;
+        height: 68px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: linear-gradient(91.86deg, #dc4a8c 1.63%, #f77125 91.47%);
+        font-family: $grotesk;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 16px;
+        line-height: 19px;
+        margin: 0 auto;
+        color: $mainColor;
+        &:hover {
+          color: $mainColor;
+        }
+      }
+    }
+  }
+}
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .container {
+    max-width: 320px;
+    padding: 0 10px;
+  }
+  .methods {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background-image: url("../img/main/methods/bg.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: 0px 0;
+    &__title {
+      font-family: $grotesk;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 30px;
+      line-height: 100%;
+      letter-spacing: 0.04em;
+      margin-bottom: 85px;
+      display: none;
+      &--line {
+        padding-left: 0px;
+      }
+      &--fill {
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke: 2px;
+      }
+      &-mob {
+        width: 298px;
+        display: block;
+        font-family: $grotesk;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 30px;
+        line-height: 100%;
+        margin-left: 15px;
+        margin-bottom: 80px;
+        .text-fill {
+          -webkit-text-fill-color: transparent;
+          -webkit-text-stroke: 2px;
+          display: block;
+          padding-left: 70px;
+        }
+      }
+    }
+    &-wrap {
+      flex-direction: column;
+    }
+    .custom-video {
+      margin-bottom: 50px;
+    }
+    &__btn {
+      &-mob {
+        width: 271px;
+        height: 68px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: linear-gradient(91.86deg, #dc4a8c 1.63%, #f77125 91.47%);
+        font-family: $grotesk;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 16px;
+        line-height: 19px;
+        margin: 0 auto;
+        color: $mainColor;
+        &:hover {
+          color: $mainColor;
+        }
+      }
     }
   }
 }
