--- a/dzvoice/assets/scss/components/_results-slider.scss
+++ b/dzvoice/assets/scss/components/_results-slider.scss
@@ -84,3 +84,363 @@
     }
   }
 }
+@media screen and (min-width:992px) and (max-width:1199px) {
+  /* Слайдер */
+.slick-slider {
+}
+/* Слайдер запущен */
+.slick-slider.slick-initialized {
+}
+/* Слайдер с точками */
+.slick-slider.slick-dotted {
+}
+/* Ограничивающая оболочка */
+.slick-list {
+  overflow: hidden;
+}
+/* Лента слайдов */
+.slick-track {
+  display: flex;
+  align-items: flex-start;
+}
+/* Слайд */
+.slick-slide {
+}
+/* Слайд активный (показывается) */
+.slick-slide.slick-active {
+}
+/* Слайд основной */
+.slick-slide.slick-current {
+}
+/* Слайд по центру */
+.slick-slide.slick-center {
+}
+/* Клонированный слайд */
+.slick-slide.slick-cloned {
+}
+/* Стрелка */
+.slick-arrow {
+  top: -90px;
+  right: 70px;
+}
+/* Стрелка влево */
+.slick-arrow.slick-prev {
+  width: 40px;
+  height: 40px;
+  background-image: url("../img/main/results/prev_992.svg");
+  background-repeat: no-repeat;
+  background-color: transparent;
+  background-size: contain;
+  font-size: 0;
+  border: 0;
+  margin-right: 65px;
+}
+/* Стрелка вправо */
+.slick-arrow.slick-next {
+  width: 40px;
+  height: 40px;
+  background-image: url("../img/main/results/next_992.svg");
+  background-repeat: no-repeat;
+  background-color: transparent;
+  background-size: contain;
+  font-size: 0;
+  border: 0;
+}
+/* Стрелка не активная */
+.slick-arrow.slick-disabled {
+}
+/* Точки (булиты) */
+.slick-dots {
+}
+.slick-dots li {
+}
+/* Активная точка */
+.slick-dots li.slick-active {
+}
+/* Элемент точки */
+.slick-dots li button {
+}
+
+.results-slider {
+  .slider__item {
+    width: 860px;
+    height: 475px;
+    margin-right: 140px;
+    border-radius: 0px 50px;
+    .custom-video {
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+}
+@media screen and (min-width: 640px) and (max-width: 991px) {
+ /* Слайдер */
+ .slick-slider {
+}
+/* Слайдер запущен */
+.slick-slider.slick-initialized {
+}
+/* Слайдер с точками */
+.slick-slider.slick-dotted {
+}
+/* Ограничивающая оболочка */
+.slick-list {
+  overflow: hidden;
+}
+/* Лента слайдов */
+.slick-track {
+  display: flex;
+  align-items: flex-start;
+}
+/* Слайд */
+.slick-slide {
+}
+/* Слайд активный (показывается) */
+.slick-slide.slick-active {
+}
+/* Слайд основной */
+.slick-slide.slick-current {
+}
+/* Слайд по центру */
+.slick-slide.slick-center {
+}
+/* Клонированный слайд */
+.slick-slide.slick-cloned {
+}
+/* Стрелка */
+.slick-arrow {
+  top: -70px;
+  right: 70px;
+}
+/* Стрелка влево */
+.slick-arrow.slick-prev {
+  width: 35px;
+  height: 35px;
+  background-image: url("../img/main/results/prev_992.svg");
+  background-repeat: no-repeat;
+  background-color: transparent;
+  background-size: contain;
+  font-size: 0;
+  border: 0;
+  margin-right: 65px;
+}
+/* Стрелка вправо */
+.slick-arrow.slick-next {
+  width: 35px;
+  height: 35px;
+  background-image: url("../img/main/results/next_992.svg");
+  background-repeat: no-repeat;
+  background-color: transparent;
+  background-size: contain;
+  font-size: 0;
+  border: 0;
+}
+/* Стрелка не активная */
+.slick-arrow.slick-disabled {
+}
+/* Точки (булиты) */
+.slick-dots {
+}
+.slick-dots li {
+}
+/* Активная точка */
+.slick-dots li.slick-active {
+}
+/* Элемент точки */
+.slick-dots li button {
+}
+
+.results-slider {
+  .slider__item {
+    width: 495px;
+    height: 273px;
+    margin-right: 50px;
+    border-radius: 0px 50px;
+    .custom-video {
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+}
+@media screen and (min-width: 480px) and (max-width: 639px) {
+  /* Слайдер */
+  .slick-slider {
+ }
+ /* Слайдер запущен */
+ .slick-slider.slick-initialized {
+ }
+ /* Слайдер с точками */
+ .slick-slider.slick-dotted {
+ }
+ /* Ограничивающая оболочка */
+ .slick-list {
+   overflow: hidden;
+ }
+ /* Лента слайдов */
+ .slick-track {
+   display: flex;
+   align-items: flex-start;
+ }
+ /* Слайд */
+ .slick-slide {
+ }
+ /* Слайд активный (показывается) */
+ .slick-slide.slick-active {
+ }
+ /* Слайд основной */
+ .slick-slide.slick-current {
+ }
+ /* Слайд по центру */
+ .slick-slide.slick-center {
+ }
+ /* Клонированный слайд */
+ .slick-slide.slick-cloned {
+ }
+ /* Стрелка */
+ .slick-arrow {
+   top: -65px;
+   right: 70px;
+ }
+ /* Стрелка влево */
+ .slick-arrow.slick-prev {
+   width: 35px;
+   height: 35px;
+   background-image: url("../img/main/results/prev_992.svg");
+   background-repeat: no-repeat;
+   background-color: transparent;
+   background-size: contain;
+   font-size: 0;
+   border: 0;
+   margin-right: 65px;
+ }
+ /* Стрелка вправо */
+ .slick-arrow.slick-next {
+   width: 35px;
+   height: 35px;
+   background-image: url("../img/main/results/next_992.svg");
+   background-repeat: no-repeat;
+   background-color: transparent;
+   background-size: contain;
+   font-size: 0;
+   border: 0;
+ }
+ /* Стрелка не активная */
+ .slick-arrow.slick-disabled {
+ }
+ /* Точки (булиты) */
+ .slick-dots {
+ }
+ .slick-dots li {
+ }
+ /* Активная точка */
+ .slick-dots li.slick-active {
+ }
+ /* Элемент точки */
+ .slick-dots li button {
+ }
+ 
+ .results-slider {
+   .slider__item {
+    width: 378px;
+    height: 209px;
+     margin-right: 25px;
+     border-radius: 0px 50px;
+     .custom-video {
+       width: 100%;
+       height: 100%;
+     }
+   }
+ }
+ }
+ @media screen and (min-width: 320px) and (max-width: 479px) {
+  /* Слайдер */
+  .slick-slider {
+ }
+ /* Слайдер запущен */
+ .slick-slider.slick-initialized {
+ }
+ /* Слайдер с точками */
+ .slick-slider.slick-dotted {
+ }
+ /* Ограничивающая оболочка */
+ .slick-list {
+   overflow: hidden;
+ }
+ /* Лента слайдов */
+ .slick-track {
+   display: flex;
+   align-items: flex-start;
+ }
+ /* Слайд */
+ .slick-slide {
+ }
+ /* Слайд активный (показывается) */
+ .slick-slide.slick-active {
+ }
+ /* Слайд основной */
+ .slick-slide.slick-current {
+ }
+ /* Слайд по центру */
+ .slick-slide.slick-center {
+ }
+ /* Клонированный слайд */
+ .slick-slide.slick-cloned {
+ }
+ /* Стрелка */
+ .slick-arrow {
+   top: -55px;
+   right: 10px;
+ }
+ /* Стрелка влево */
+ .slick-arrow.slick-prev {
+   width: 35px;
+   height: 35px;
+   background-image: url("../img/main/results/prev_992.svg");
+   background-repeat: no-repeat;
+   background-color: transparent;
+   background-size: contain;
+   font-size: 0;
+   border: 0;
+   margin-right: 55px;
+ }
+ /* Стрелка вправо */
+ .slick-arrow.slick-next {
+   width: 35px;
+   height: 35px;
+   background-image: url("../img/main/results/next_992.svg");
+   background-repeat: no-repeat;
+   background-color: transparent;
+   background-size: contain;
+   font-size: 0;
+   border: 0;
+ }
+ /* Стрелка не активная */
+ .slick-arrow.slick-disabled {
+ }
+ /* Точки (булиты) */
+ .slick-dots {
+ }
+ .slick-dots li {
+ }
+ /* Активная точка */
+ .slick-dots li.slick-active {
+ }
+ /* Элемент точки */
+ .slick-dots li button {
+ }
+ 
+ .results-slider {
+   .slider__item {
+    width: 298px;
+    height: 165px;
+     margin-right: 25px;
+     border-radius: 0px 50px;
+     .custom-video {
+       width: 100%;
+       height: 100%;
+     }
+   }
+ }
+ }
